--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -7,6 +7,7 @@ RUN set -ex; \
 	apt-get install -y \
 		libjpeg-dev \
 		libpng-dev \
+                unzip \
 	; \
 	rm -rf /var/lib/apt/lists/*; \
 	\
@@ -29,16 +30,16 @@ RUN a2enmod rewrite expires
 
 VOLUME /var/www/html
 
+ARG HASH
+
 ENV WORDPRESS_VERSION 4.8.3
 ENV WORDPRESS_SHA1 8efc0b9f6146e143ed419b5419d7bb8400a696fc
 
 RUN set -ex; \
-	curl -o wordpress.tar.gz -fSL "https://wordpress.org/wordpress-${WORDPRESS_VERSION}.tar.gz"; \
-	echo "$WORDPRESS_SHA1 *wordpress.tar.gz" | sha1sum -c -; \
-# upstream tarballs include ./wordpress/ so this gives us /usr/src/wordpress
-	tar -xzf wordpress.tar.gz -C /usr/src/; \
-	rm wordpress.tar.gz; \
-	chown -R www-data:www-data /usr/src/wordpress
+        curl -o wordpress.zip -fSL "https://github.com/WordPress/WordPress/archive/${WORDPRESS_COMMIT_HASH}.zip";     \
+        unzip wordpress.zip -d /usr/src/wordpress; \
+        rm wordpress.zip; \
+        chown -R www-data:www-data /usr/src/wordpress
 
 COPY docker-entrypoint.sh /usr/local/bin/
 
